# rust-prometheus-setup

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
k8s/: prometheus-configmap.yaml
k8s/app/: deployment.yaml  svc.yaml
src/: main.rs
